# glide

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/glide-cli/: Cargo.toml
crates/glide-cli/src/: commands.rs  config.rs  main.rs
crates/glide-core/: Cargo.toml
crates/glide-core/src/: client_connection.rs  clipboard.rs  device.rs  display.rs  display_layout.rs  error.rs  input_config.rs  input_event.rs  lib.rs  mime_rep.rs  payload.rs  policy.rs  route.rs  sync_event.rs  transfer.rs
crates/glide-core/src/discovery/: mdns.rs  mod.rs  peer_registry.rs  udp_multicast.rs
crates/glide-core/tests/: core_types.rs
crates/glide-daemon/: Cargo.toml
crates/glide-daemon/src/: lib.rs  main.rs
crates/glide-desktop/: Cargo.toml
crates/glide-desktop/src/: clipboard_adapter.rs  input_adapter.rs  lan_input.rs  lan_sync.rs  lib.rs  linux_backends.rs  monitor_detect.rs  platform_input.rs  policy_ui.rs  windows_clipboard.rs  windows_input.rs
crates/glide-desktop/src/linux_backends/: headless.rs  linux_input.rs  wayland.rs  x11.rs
crates/glide-desktop/tests/: lan_sync_tests.rs
crates/glide-gui/: Cargo.toml
crates/glide-gui/src/: gui_backend.rs  main.rs
crates/glide-gui/ui/: app.slint  colors.slint  components.slint  monitor_manager.slint  pages.slint
crates/glide-server/: Cargo.toml
crates/glide-server/src/: cleanup.rs  database.rs  handlers.rs  input_relay.rs  lib.rs  main.rs  models.rs  state.rs  temp_token.rs  ws.rs
crates/glide-server/static/: index.html
crates/glide-server/tests/: server_tests.rs
crates/glide-tauri/: Cargo.toml  tauri.conf.json
crates/glide-tauri/public/: index.html
crates/glide-tauri/src/: main.rs  sync_engine.rs
crates/glide-tauri/src-tauri/: main.rs  tauri.conf.json
docs/: ARCHITECTURE.md  DESIGN.md  PLAN_STATUS.md  PRODUCT.md  TECHNICAL.md  design.md  gui-migration.md  test-plan.md  tls-setup.md  windows-packaging.md
docs/superpowers/plans/: 2026-06-04-glide-lan-first-sync.md  2026-06-08-unified-ui-ux.md
scripts/: check-windows-package-deps.ps1  gen-icon.py  package-linux.sh  test-cli-integration.sh  test-cli-payload.sh  test-clipboard-cli.sh  test-cross-screen.sh  test-docker-network.sh  test-e2e-linux.sh  test-e2e.py  test-gui-linux.sh  test-keyboard-mouse-protocol.sh  test-lib.sh  test-network.sh  test-reconnect.sh  test-stress.sh  test-tc-network.sh  test-windows-cli-wine.sh  test-windows-clipboard.ps1  test-windows-connect.ps1  test-windows-gui-smoke.ps1  test-windows-gui-wine.sh  test-windows-gui.ahk  test-windows-installed-client.ps1  test-windows-installer.ps1  test-windows-notepad-clipboard.py
