[workspace]
resolver = "2"
members = [
    "crates/glide-core",
    "crates/glide-server",
    "crates/glide-cli",
    "crates/glide-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
glide-core = { path = "crates/glide-core" }
glide-server = { path = "crates/glide-server" }
glide-cli = { path = "crates/glide-cli" }
glide-desktop = { path = "crates/glide-desktop" }

# Common external dependencies (pinned for Rust 1.75 compatibility)
anyhow = "=1.0.79"
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
thiserror = "=1.0.56"
tokio = { version = "=1.35.1", features = ["full"] }
uuid = { version = "=1.7.0", features = ["v4", "serde"] }
chrono = { version = "=0.4.35", features = ["serde"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
