[workspace]
resolver = "2"
members = [
    "crates/glide-core",
    "crates/glide-server",
    "crates/glide-cli",
    "crates/glide-desktop",
    "crates/glide-daemon",
    "crates/glide-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
glide-core = { path = "crates/glide-core" }
glide-server = { path = "crates/glide-server" }
glide-desktop = { path = "crates/glide-desktop" }

# Common external dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
