[package]
name = "glide-cli"
version.workspace = true
edition.workspace = true

[dependencies]
glide-core.workspace = true
glide-server.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
url = "2.5"
sha2 = "0.10"
base64 = "0.21"
async-trait = "0.1"
