[package]
name = "glide-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
glide-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "=0.1.77"
base64 = "=0.21.7"
sha2 = "=0.10.8"

# Windows clipboard (only on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "shellapi", "errhandlingapi"] }
widestring = "1.0"
