[package]
name = "glide-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
glide-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"
base64 = "0.21"
sha2 = "0.10"
tokio-tungstenite = "0.21"
futures = "0.3"

# Windows clipboard (only on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "windef"] }
