[package]
name = "glide-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
glide-core = { path = "../glide-core" }
chrono = "0.4"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
slint-build = "1.16"
