[package]
name = "glide-server"
version.workspace = true
edition.workspace = true

[dependencies]
glide-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "=0.7.4", features = ["ws", "multipart"] }
tower = "=0.4.13"
tower-http = { version = "=0.5.2", features = ["cors", "trace"] }
sqlx = { version = "=0.7.3", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
tokio-tungstenite = "=0.21.0"
futures = "0.3"
sha2 = "0.10"
base64 = "0.21"
